--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,9 +10,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-rater": "^6.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
